Ability to "Show More" on home page (MMDB-728) (MMDB-627)